--- a/captnd_dashboard_intro.html
+++ b/captnd_dashboard_intro.html
@@ -17,7 +17,7 @@ therefore any inferences or conclusions from this analysis must be
 treated with caution, and should not be compared to the official
 aggregate collection and waiting time for <a href="https://publichealthscotland.scot/publications/psychological-therapies-waiting-times/psychological-therapies-waiting-times-quarter-ending-march-2025/">PT</a>
 and <a href="https://publichealthscotland.scot/publications/child-and-adolescent-mental-health-services-camhs-waiting-times/child-and-adolescent-mental-health-services-camhs-waiting-times-quarter-ending-march-2025/">CAMHS</a>.</p>
-<p>This report relates to the period July 2024 to September 2025.</p>
+<p>This report relates to the period August 2024 to October 2025.</p>
 <div id="data-quality" class="section level2">
 <h2>Data Quality</h2>
 <p>Good quality data are crucial for accuracy and interpretation, and
@@ -28,8 +28,7 @@ pathway for an individual within CAPTND (see <a href="#variables-reported">Varia
 records where these key variables are not available the pathway cannot
 be created accurately and cannot, therefore, be used in CAPTND analysis.
 A comparison of referral counts before and after pathway creation can be
-found in the accompanying <a href="https://publichealthscotland.scot/publications/child-adolescent-and-psychological-therapies-national-dataset-captnd/psychological-therapies-in-child-adolescent-and-psychological-therapies-national-dataset-2-september-2025/">data
-quality documents</a></p>
+found in the accompanying data quality documents.</p>
 <p>Data returns for CAPTND began in June 2019, and following extensive
 data quality checking and collaboration with NHS boards data quality
 improved sufficiently by January 2020 to enable initial and limited
