--- a/captnd_dashboard_camhs_metadata.html
+++ b/captnd_dashboard_camhs_metadata.html
@@ -22,8 +22,8 @@ this analysis must be treated with caution.</p>
 <p><strong>Publication title</strong><br />
 Child, Adolescent, and Psychological Therapies National Dataset
 (CAPTND):<br />
-Child and Adolescent Mental Health services (CAMHS) Report (August 2024
-- October 2025)</p>
+Child and Adolescent Mental Health services (CAMHS) Report (September
+2024 - November 2025)</p>
 <p><strong>Description</strong><br />
 Activity in Child and Adolescent Mental Health services (CAMHS) recorded
 in the Child, Adolescent, and Psychological Therapies National Dataset
@@ -38,13 +38,13 @@ Word document</p>
 Child, Adolescent, and Psychological Therapies National Dataset
 (CAPTND), Scottish Index of Multiple Deprivation (SIMD)</p>
 <p><strong>Date that data are acquired</strong><br />
-05th of December 2025</p>
+09th of January 2026</p>
 <p><strong>Release date</strong><br />
-6th of January 2026</p>
+3rd of February 2026</p>
 <p><strong>Frequency</strong><br />
 6 months</p>
 <p><strong>Timeframe of data and timeliness</strong><br />
-Data from August 2024 to October 2025. Biannual release.</p>
+Data from September 2024 to November 2025. Biannual release.</p>
 <p><strong>Continuity of data</strong><br />
 Information has been collected nationally since June 2019.</p>
 <p><strong>Concepts and definitions</strong><br />
@@ -79,15 +79,15 @@ The PHS protocol on Statistical Disclosure Protocol is followed.</p>
 <p><strong>Official statistics accreditation</strong><br />
 Official statistics in development</p>
 <p><strong>Last published</strong><br />
-1st of July 2025</p>
+5th of August 2025</p>
 <p><strong>Next published</strong><br />
-7th of July 2026</p>
+4th of August 2026</p>
 <p><strong>Date of first publication</strong><br />
 1st of June 2021</p>
 <p><strong>Help email</strong><br />
 <a href="mailto:phs.captnd@phs.scot">phs.captnd@phs.scot</a> <br></p>
 <p><strong>Date form completed</strong><br />
-07th of January 2026</p>
+13th of January 2026</p>
 </div>
 <div id="appendix-3---early-access-details" class="section level2">
 <h2>Appendix 3 - Early access details</h2>
