--- a/captnd_dashboard_intro.html
+++ b/captnd_dashboard_intro.html
@@ -17,7 +17,8 @@ therefore any inferences or conclusions from this analysis must be
 treated with caution, and should not be compared to the official
 aggregate collection and waiting time for <a href="https://publichealthscotland.scot/publications/psychological-therapies-waiting-times/psychological-therapies-waiting-times-quarter-ending-march-2025/">PT</a>
 and <a href="https://publichealthscotland.scot/publications/child-and-adolescent-mental-health-services-camhs-waiting-times/child-and-adolescent-mental-health-services-camhs-waiting-times-quarter-ending-march-2025/">CAMHS</a>.</p>
-<p>This report relates to the period August 2024 to October 2025.</p>
+<p>This report relates to the period September 2024 to November
+2025.</p>
 <div id="data-quality" class="section level2">
 <h2>Data Quality</h2>
 <p>Good quality data are crucial for accuracy and interpretation, and
