--- a/captnd_db_ref_text_camhs.html
+++ b/captnd_db_ref_text_camhs.html
@@ -1,11 +1,11 @@
 
 
 
-<p>For the quarter ending October 2025, there were a total of 7,607
+<p>For the quarter ending November 2025, there were a total of 7,607
 individuals referred to PT recorded in CAPTND across NHSScotland. This
 was a decrease of 533 (6.5%) compared with the previous quarter, and an
-increase of 213 (2.9%) compared with the same quarter ending October
-2024.</p>
+increase of 4,621 (154.8%) compared with the same quarter ending
+November 2024.</p>
 <p>For some health boards referral numbers may appear to have increased
 sharply over the past five quarters, which may be reflective of improved
 data quality of submissions allowing more pathways to be counted in
